Fix template service test